--- a/Resume/index.html
+++ b/Resume/index.html
@@ -217,6 +217,7 @@ NPTEL (IIT MADRAS & HASURA). Ranked in the top 5% in the course (All India)</li>
 <ul>
 <li> Web Development Intern at QuarkMe (March 2017 – Present) </li>
 <li> Web Development Intern at Hasura (May 2017 – Present) </li>
+<li> Machine Learning Intern at IBM </li>
 </ul>
 
 <h3> Extracurricular Activities <h3>
