--- a/Resume/index.html
+++ b/Resume/index.html
@@ -207,7 +207,7 @@ NPTEL (IIT MADRAS & HASURA). Ranked in the top 5% in the course (All India)</li>
 <li> Operating Systems: Windows XP, 7, 8; Ubuntu 14.04; Mac OSX</li>
 <li> Participated in Inter-school competitions like the National Cyber Olympiad, Zonal Informatics Olympiad</li>
 <li> Programming IDEs: Turbo C, Code::Blocks</li>
-<li> Programming Languages: C++ (5 years), C, Java, JavaScript, MySQL, HTML, PHP</li>
+<li> Programming Languages: C++ (5 years), C, Java, JavaScript, MySQL, HTML, PHP, Python</li>
 
 </ul>
 
